--- a/changelog.html
+++ b/changelog.html
@@ -1,12 +1,23 @@
-<h1>Current: 5.2.12.78  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
+<h1>Current: 6.0.0.0  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
 
 <h3>Requirements / Built With</h3>
 <ul>
 	<li>Minecraft 1.12 - 1.12.2</li>
-	<li>Minecraft Forge 14.23.1.2562+</li>
-	<li>(Optional) JEI 4.7.11.101+</li>
-	<li>(Optional) JER 0.8.5.26+</li>
+	<li>Minecraft Forge 14.23.4.2747+</li>
+	<li>(Optional) JEI 4.11.0.206+</li>
+	<li>(Optional) JER 0.8.8.45+</li>
 </ul>
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 6.0.0.0</a></h2>
+<h3>Moved to new TileEntity Registration. Most old ones will break!</h3>
+<ul>
+	<li>Remove deprecated methods</li>
+	<li>Change TileEntity registration to use ResourceLocation</li>
+	<li>Fix JEI integration failing to initialize</li>
+	<li>Change JER Configuration to solve compatibility issues with other mods (Vampirism)</li>
+	<li>WIP: Magic Wand Stuff that hasn't been touched in 5 months. Don't expect any of it to work</li>
+	<li>Update Forge, JEI, and JER</li>
+</ul>
+
 <h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 5.2.12.78</a></h2>
 <ul>
 	<li>Add in config option for partial bucket amounts.</li>
