--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<h1>Current: 6.0.0.1  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
+<h1>Current: 6.0.0.5  - <a href="https://www.grim3212.com/grim-pack">https://www.grim3212.com/grim-pack</a></h1>
 
 <h3>Requirements / Built With</h3>
 <ul>
@@ -7,9 +7,12 @@
 	<li>(Optional) JEI 4.11.0.206+</li>
 	<li>(Optional) JER 0.8.8.45+</li>
 </ul>
-<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 6.0.0.1</a></h2>
-<h3>Moved to new TileEntity Registration. Most old ones will break!</h3>
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 6.0.0.5</a></h2>
 <ul>
+	<li>Shorten cheese maker time</li>
+	<li>Fix knife bread recipe</li>
+	<li>Check if desert wells placement isnt null first</li>
+	<li>Change some wands to make sure there is enough durabilty before they run</li>
 	<li>Remove deprecated methods</li>
 	<li>Change TileEntity registration to use ResourceLocation</li>
 	<li>Fix JEI integration failing to initialize</li>
