--- a/changelog.html
+++ b/changelog.html
@@ -7,8 +7,9 @@
 	<li>(Optional) JEI 4.11.0.206+</li>
 	<li>(Optional) JER 0.8.8.45+</li>
 </ul>
-<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 6.0.0.5</a></h2>
+<h2><a href="https://www.grim3212.com/grim-pack/info/changelog">Changes 6.0.0.6</a></h2>
 <ul>
+	<li>Fix slingshots doing no damage</li>
 	<li>Shorten cheese maker time</li>
 	<li>Fix knife bread recipe</li>
 	<li>Check if desert wells placement isnt null first</li>
